--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="https://scholar.google.com/citations?user=vPI2AAUAAAAJ&hl=en"><i class="ai ai-google-scholar big-icon"></i></a></li>
 							<li><a href="https://github.com/emilbiju/"><i class="fa fa-github big-icon"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/emilbiju/"><i class="fa fa-linkedin big-icon"></i></a></li>
-							<!-- <li><a href="resources/Resume.pdf"><i class="ai ai-cv big-icon"></i></a></li> -->
+							<!-- <li><a href="Resume.pdf"><i class="ai ai-cv big-icon"></i></a></li> -->
 						</ul>
 
 					</div>
@@ -100,7 +100,7 @@
 						My work has led to publications in top conferences such as <a href="https://www.2022.aclweb.org">ACL</a>, <a href="https://coling2020.org">COLING</a> and <a href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 						My primary research interests include Interpretable Machine Learning, Natural Language Processing and Deep Learning for Signal Processing.
 					</p>
-					<i class="fa fa-download"></i>&emsp; Download my résumé <a href="resources/resume.pdf">here</a>
+					<i class="fa fa-download"></i>&emsp; Download my résumé <a href="resume.pdf">here</a>
 				</div>
 
 			</div>
