--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Multi-head self-attention is a vital component of the Transformer, a neural netw
 							<div class="pub-publication ">International Conference on Computational Linguistics (COLING 2020)</div>
 							<p>
 								<a class="btn btn-primary btn-outline btn-xs" onclick="var div = document.getElementById('COLING_abstract_publication'); if (div.style.display !== 'none') {div.style.display = 'none';} else {div.style.display = 'block';}">Abstract</a>
-								<a class="btn btn-primary btn-outline btn-xs " href="https://arxiv.org/pdf/2006.09904.pdf">PDF</a>
+								<a class="btn btn-primary btn-outline btn-xs " href="https://aclanthology.org/2020.coling-main.87/">PDF</a>
 								<a class="btn btn-primary btn-outline btn-xs " href="resources/IndicSwipe-Poster.pdf">Poster</a>
 								<a class="btn btn-primary btn-outline btn-xs " href="https://emilbiju.github.io/indic-swipe/">Webpage</a>
 								<a class="btn btn-primary btn-outline btn-xs " href="https://github.com/emilbiju/indic-swipe/">Code</a>
