--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item"><a href="#top">Home</a></li>
 					<li class="nav-item"><a href="#publications">Publications</a></li>
+					<li class="nav-item"><a href="https://passionjee.wordpress.com">Blog</a></li>
 				</ul>
 			</div>
 		</div>
