--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<li><a target="_blank" href="https://scholar.google.com/citations?user=vPI2AAUAAAAJ&hl=en"><i class="ai ai-google-scholar big-icon"></i></a></li>
 							<li><a target="_blank" href="https://github.com/emilbiju/"><i class="fa fa-github big-icon"></i></a></li>
 							<li><a target="_blank" href="https://www.linkedin.com/in/emilbiju/"><i class="fa fa-linkedin big-icon"></i></a></li>
-							<!-- <li><a target="_blank" href="resume.pdf"><i class="ai ai-cv big-icon"></i></a></li> -->
+							<!-- <li><a target="_blank" href="resources/Resume.pdf"><i class="ai ai-cv big-icon"></i></a></li> -->
 						</ul>
 
 					</div>
@@ -101,7 +101,7 @@
 						My work has led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 						My primary research interests include Interpretable Machine Learning, Natural Language Processing and Deep Learning for Signal Processing.
 					</p>
-					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resume.pdf">here</a>
+					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>
 				</div>
 
 			</div>
@@ -392,8 +392,9 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 						<span itemprop="name"><text style="font-size: large"><b>Indian Institute of Technology Madras</b></text></span>
 						<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 							<div class="pub-authors2 " itemprop="author ">
-								<text style="color: rgb(67, 67, 67); font-size: medium;">B.Tech (Honors) in Electrical Engineering <b style="color: #0095eb">(CGPA: 9.70/10)</b> & Minor in Deep Learning<br>
-								<ul  style="padding: 1.2em;">
+								<text style="color: #0095eb; font-size: medium;">B.Tech (Honors) in Electrical Engineering, Minor in Deep Learning<br>
+								</text>
+								<ul  style="padding: 1.2em;color: black">
 								<li><text style="color: black">Graduated as the second topper of the Electrical Engineering department</text></li>
 								<li><text style="color: black">Recipient of the Silver Medal (Dr. Dilip Veeraraghavan Memorial Award)</text></li>
 								<li><text style="color: black">Received the top grade (S) in all Computer Science, Mathematics and Humanities courses</text></li>
@@ -421,7 +422,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 							<span itemprop="name"><text style="font-size: large"><b>Microsoft R&D</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
-									<text style="color: rgb(67, 67, 67); font-size: medium;">Data and Applied Scientist</text><br>
+									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist</text><br>
 									<br>
 									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
 								</div>
@@ -429,7 +430,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 						<h2 class="year">Summer 2020</h2><br>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
-									<text style="color: rgb(67, 67, 67); font-size: medium;">Data and Applied Scientist Intern</text><br>
+									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist Intern</text><br>
 									<br>
 									<text style="color: black; font-size: medium;">Interned in the Azure Global Engineering team analyzing multi-spectral satellite image data for applications in the agricultural and oil industries.</text>
 								</div>
@@ -448,7 +449,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 							<span itemprop="name"><text style="font-size: large"><b>General Electric</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
-									<text style="color: rgb(67, 67, 67); font-size: medium;">Data Science Intern</text><br>
+									<text style="color: #0095eb; font-size: medium;">Data Science Intern</text><br>
 									<br>
 									<text style="color: black; font-size: medium;">Developed ML models for keyword clustering and topic ranking of service records for identifying common failure modes in healthcare machines.</text>
 								</div>
