--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
 
 	<!-- Section: Publications -->
 	<section id="publications" class="home-section ">
-		<ul class="fa-ul"><div class="container ">
+		<ul class="fa-ul"><div class="container" style="margin-top: -1em;">
 
 			<div class="row " style="margin: 0em 0 ">
 				<div class="col-md-4 "></div>
 				<div class="col-md-8 " style="margin-bottom: 0em; "><h1>Publications</h1></div>
 			</div>
 
-			<h2 class="year">2022</h2>
+			<h2 class="year" style="color: rgb(175, 175, 175)">2022</h2>
 
 			<!-- CanvasAsContext -->
 			<div class="row" style="margin: 2.5em 0 ">
@@ -243,7 +243,7 @@ The Maximum Scatter Traveling Salesman Problem (MSTSP) is a variant of the famou
 			</div>
 
 
-			<h2 class="year">2021</h2>
+			<h2 class="year" style="color: rgb(175, 175, 175)">2021</h2>
 
 			<!-- ColourUnderstanding -->
 			<div class="row" style="margin: 2.5em 0 ">
@@ -260,7 +260,7 @@ The Maximum Scatter Traveling Salesman Problem (MSTSP) is a variant of the famou
 							<div class="pub-publication ">ACM India Joint International Conference on Data Science & Management of Data (ACM CODS-COMAD 2021)</div>
 							<p>
 								<a class="btn btn-primary btn-outline btn-xs" onclick="var div = document.getElementById('ColourUnderstanding_abstract_publication'); if (div.style.display !== 'none') {div.style.display = 'none';} else {div.style.display = 'block';}">Abstract</a>
-								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://arxiv.org/pdf/2006.09904.pdf">PDF</a>
+								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3430984.3431074">PDF</a>
 								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://www.youtube.com/watch?v=OSDP-MP_XuE">Talk</a>
 								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="resources/cods-comad-presentation.pdf">Slides</a>
 								<a class="btn btn-primary btn-outline btn-xs" onclick="var div = document.getElementById('ColourUnderstanding_bib_publication'); if (div.style.display !== 'none') {div.style.display = 'none';} else {div.style.display = 'block';}">BibTeX</a>
@@ -318,7 +318,7 @@ Multi-head self-attention is a vital component of the Transformer, a neural netw
 				</div>
 			</div>
 
-			<h2 class="year">2020</h2>
+			<h2 class="year" style="color: rgb(175, 175, 175)">2020</h2>
 
 			<!-- ColourUnderstanding -->
 			<div class="row" style="margin: 2.5em 0 ">
@@ -338,7 +338,7 @@ Multi-head self-attention is a vital component of the Transformer, a neural netw
 							<div class="pub-publication ">International Conference on Computational Linguistics (COLING 2020)</div>
 							<p>
 								<a class="btn btn-primary btn-outline btn-xs" onclick="var div = document.getElementById('COLING_abstract_publication'); if (div.style.display !== 'none') {div.style.display = 'none';} else {div.style.display = 'block';}">Abstract</a>
-								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://arxiv.org/pdf/2006.09904.pdf">PDF</a>
+								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://aclanthology.org/2020.coling-main.87.pdf">PDF</a>
 								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="resources/IndicSwipe-Poster.pdf">Poster</a>
 								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://emilbiju.github.io/indic-swipe/">Webpage</a>
 								<a class="btn btn-primary btn-outline btn-xs " target="_blank" href="https://github.com/emilbiju/indic-swipe/">Code</a>
@@ -373,15 +373,14 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 	</section>
 
 
-	<section id="education" class="home-section ">
-		<ul class="fa-ul"><div class="container ">
-
+	<section id="education" class="home-section" style="margin-top: -5em;">
+		<ul class="fa-ul"><div class="container" style="margin-top: -1em; margin-bottom: -2em;">
 			<div class="row " style="margin: 0em 0 ">
 				<div class="col-md-4 "></div>
 				<div class="col-md-8 " style="margin-bottom: 0em; "><h1>Education</h1></div>
 			</div>
 
-			<h2 class="year">2017-2021</h2>
+			<h2 class="year" style="color: rgb(175, 175, 175)">2017-2021</h2>
 
 			<div class="row" style="margin: 2.5em 0 ">
 				<div class="col-md-4">
@@ -406,13 +405,13 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 		</section>
 
 
-		<section id="work-experience" class="home-section ">
-			<ul class="fa-ul"><div class="container ">
+		<section id="work-experience" class="home-section" style="margin-top: -5em;">
+			<ul class="fa-ul"><div class="container" style="margin-top: -1em; margin-bottom: -2em;">
 				<div class="row " style="margin: 0em 0 ">
 					<div class="col-md-4 "></div>
 					<div class="col-md-8 " style="margin-bottom: 0em; "><h1>Work Experience</h1></div>
 				</div>
-				<h2 class="year">2021-present</h2>
+				<h2 class="year" style="color: rgb(175, 175, 175)">2021-present</h2>
 				<div class="row" style="margin: 2.5em 0 ">
 					<div class="col-md-4">
 						<img class="pub-img " style="margin-right: auto; margin-left: auto; width: 20%" src="img/Experience/Microsoft.png"></img>
@@ -427,7 +426,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
 								</div>
 							</div>
-						<h2 class="year">Summer 2020</h2><br>
+						<!-- <h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em">Summer 2020</h2><br> -->
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
 									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist Intern</text><br>
@@ -439,12 +438,12 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 					</div>
 				</div>
 
-				<h2 class="year">Summer 2019</h2>
-				<div class="row" style="margin: 2.5em 0 ">
+				<h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em;"></h2>
+				<div class="row" style="margin: 3.5em 0 -5em">
 					<div class="col-md-4">
 						<img class="pub-img " style="margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/GEHC.png"></img>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-8"">
 						<li itemscope itemtype="http://schema.org/CreativeWork ">
 							<span itemprop="name"><text style="font-size: large"><b>General Electric</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
@@ -457,29 +456,30 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 						</li>
 					</div>
 				</div>
-
 			</div>
 			</ul>
 			</section>
 		
 
 	<!-- Section: Updates -->
-	<!-- <section id="updates" class="home-section ">
-		<div class="container ">
-
+	<!-- <section id="updates" class="home-section "  style="margin-top: -5em;">
+		<div class="container">
 			<div class="row ">
-				<div class="col-xs-0 col-md-4 section-heading "></div>
+				<div class="col-xs-0 col-md-4 section-heading"></div>
 				<div class="col-xs-12 col-md-8 section-heading " style="margin-bottom: 1em; "><h1>Updates</h1></div>
 			</div>
 
 			<div class="col-xs-0 col-md-1"></div>
 			<div class="col-xs-12 col-md-11 update-text" style="margin: 0em; height: 250px; overflow-y: auto;">
 				<strong style="color: #cc0e00">[Nov 2021]</strong> Published an article on self-supervised learning for graphs</em>. <a target="_blank" href="https://passionjee.wordpress.com">[Blog]</a><br>
+				<strong style="color: #cc0e00">[Nov 2021]</strong> Published an article on self-supervised learning for graphs</em>. <a target="_blank" href="https://passionjee.wordpress.com">[Blog]</a><br>
+				<strong style="color: #cc0e00">[May 2021]</strong> Graduated from IIT Madras</em>. <a target="_blank" href="https://passionjee.wordpress.com">[Blog]</a><br>
+				<strong style="color: #cc0e00">[Dec 2020]</strong> Presented our work on Gesture typing in Indic languages at COLING hosted from Barcelona, Spain.</em> <a target="_blank" href="https://passionjee.wordpress.com">[Blog]</a><br>
 			</div>
 		</div>
 	</section> -->
 
-	<footer class="site-footer ">
+	<footer class="site-footer" style="margin-top: 1em;">
 		<div class="container ">
 			<p class="powered-by ">
 				&copy; Powered by the <a target="_blank" href="https://github.com/gcushen/hugo-academic " target="_blank ">Academic theme</a> for <a target="_blank" href="http://gohugo.io " target="_blank ">Hugo</a>.
