--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					<li class="nav-item"><a href="#top">Home</a></li>
 					<li class="nav-item"><a href="#publications">Publications</a></li>
 					<li class="nav-item"><a href="#education">Education</a></li>
+					<li class="nav-item"><a href="#work-experience">Work</a></li>
 					<li class="nav-item"><a target="_blank" href="https://passionjee.wordpress.com">Blog</a></li>
 				</ul>
 			</div>
