--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="http://iitm.ac.in">Indian Institute of Technology Madras</a>. 
 						During my undergraduate studies, I pursued research work at the intersection of NLP and deep learning under the guidance of <a target="_blank" href="https://www.cse.iitm.ac.in/~miteshk/">Prof. Mitesh Khapra</a> and <a target="_blank" href="http://www.cse.iitm.ac.in/~pratyush/">Prof. Pratyush Kumar</a>.
 						My work has led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
-						My primary research interests include Interpretable Machine Learning, Natural Language Processing and Deep Learning for Signal Processing.
+						My primary research interests include interpretable and robust machine learning, natural language processing and deep learning.
 					</p>
 					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>
 				</div>
