--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 					<p>
 						I am working as a Data and Applied Scientist at Microsoft in the Cybersecurity research team. 
-						I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="http://iitm.ac.in">Indian Institute of Technology Madras</a>. 
+						I graduated with a Bachelor's degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="http://iitm.ac.in">Indian Institute of Technology Madras</a>. 
 						During my undergraduate studies, I pursued research work at the intersection of NLP and deep learning under the guidance of <a target="_blank" href="https://www.cse.iitm.ac.in/~miteshk/">Prof. Mitesh Khapra</a> and <a target="_blank" href="http://www.cse.iitm.ac.in/~pratyush/">Prof. Pratyush Kumar</a>.
 						My work has led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 						My primary research interests include interpretable and robust machine learning, natural language processing and deep learning.
