--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 						<span itemprop="name"><text style="font-size: large"><b>Indian Institute of Technology Madras</b></text></span>
 						<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 							<div class="pub-authors2 " itemprop="author ">
-								<text style="color: #0095eb; font-size: medium;">B.Tech (Honors) in Electrical Engineering, Minor in Deep Learning<br>
+								<text style="color: #0095eb; font-size: medium;">B.Tech (Honors) in Electrical Engineering (CGPA: 9.70/10), Minor in Deep Learning<br>
 								</text>
 								<ul  style="padding: 1.2em;color: black">
-								<li><text style="color: black">Graduated as the second topper of the Electrical Engineering department</text></li>
-								<li><text style="color: black">Recipient of the Silver Medal (Dr. Dilip Veeraraghavan Memorial Award)</text></li>
+								<li><text style="color: black">Graduated as the 2nd topper of the Electrical Engineering department</text></li>
+								<li><text style="color: black">Recipient of the Silver Medal (Dr. Dilip Veeraraghavan Memorial Award) for featuring as the institute 2nd topper based on overall CGPA and cumulative performance in Humanities category courses</text></li>
 								<li><text style="color: black">Received the top grade (S) in all Computer Science, Mathematics and Humanities courses</text></li>
 							</ul></div>
 						</div>
@@ -424,7 +424,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 								<div class="pub-authors2 " itemprop="author ">
 									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist</text><br>
 									<br>
-									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
+									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security. Promoted from Level 59 to Level 60 in March 2022.</text>
 								</div>
 							</div>
 						<!-- <h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em">Summer 2020</h2><br> -->
