--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
 
 					<p>
 						I am working as a Data and Applied Scientist at Microsoft in the Cybersecurity research team. 
-						I graduated with a Bachelor's degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="http://iitm.ac.in">Indian Institute of Technology Madras</a>. 
+						I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="http://iitm.ac.in">Indian Institute of Technology Madras</a>. 
 						During my undergraduate studies, I pursued research work at the intersection of NLP and deep learning under the guidance of <a target="_blank" href="https://www.cse.iitm.ac.in/~miteshk/">Prof. Mitesh Khapra</a> and <a target="_blank" href="http://www.cse.iitm.ac.in/~pratyush/">Prof. Pratyush Kumar</a>.
 						My work has led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
-						My primary research interests include interpretable and robust machine learning, natural language processing and deep learning.
+						My primary research interests include Interpretable Machine Learning, Natural Language Processing and Deep Learning for Signal Processing.
 					</p>
 					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>
 				</div>
 
 			</div>
 
-			<table class='about-edu'>
+			<table class='about-edu', style="margin-bottom: -1em">
 				<tr>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
 						<a target="_blank" href="http://iitm.ac.in"><img src="img/About/IITM.png " width="35% "></a>
@@ -143,11 +143,11 @@
 
 	<!-- Section: Publications -->
 	<section id="publications" class="home-section ">
-		<ul class="fa-ul"><div class="container" style="margin-top: -1em;">
+		<ul class="fa-ul"><div class="container" style="margin-top: -2em;margin-bottom: -5em">
 
 			<div class="row " style="margin: 0em 0 ">
 				<div class="col-md-4 "></div>
-				<div class="col-md-8 " style="margin-bottom: 0em; "><h1>Publications</h1></div>
+				<div class="col-md-8 " style="margin-bottom: -1em; "><h1>Publications</h1></div>
 			</div>
 
 			<h2 class="year" style="color: rgb(175, 175, 175)">2022</h2>
@@ -374,29 +374,62 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 	</section>
 
 
-	<section id="education" class="home-section" style="margin-top: -5em;">
-		<ul class="fa-ul"><div class="container" style="margin-top: -1em; margin-bottom: -2em;">
+	<section id="patents" class="home-section ">
+		<ul class="fa-ul"><div class="container" style="margin-top: -2em">
+
 			<div class="row " style="margin: 0em 0 ">
 				<div class="col-md-4 "></div>
-				<div class="col-md-8 " style="margin-bottom: 0em; "><h1>Education</h1></div>
+				<div class="col-md-8 " style="margin-bottom: -1em; "><h1>Patents</h1></div>
+			</div>
+
+			<h2 class="year" style="color: rgb(175, 175, 175)">2023</h2>
+
+			<!-- CanvasAsContext -->
+			<div class="row" style="margin: 2.5em 0 ">
+				<div class="col-md-4">
+					<img class="pub-img " style="margin-right: auto; margin-left: auto; width: 60%" src="img/Publications/graph_rep_img3.png"></img>
+				</div>
+				<div class="col-md-8">
+					<li itemscope itemtype="http://schema.org/CreativeWork ">
+						<span itemprop="name">Graph-AI based Methods and Solutions for Detecting Malicious Applications</span>
+						<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
+							<div class="pub-authors " itemprop="author ">
+								<b style="color: #0095eb">Emil Biju</b> <text style="color: black">and 7 co-inventors</text>
+							</div>
+							<br>
+							<div class="pub-publication ">Patent filed in Jan 2023</div>
+						</div>
+					</li>
+				</div>
+			</div>
+	</div>
+</ul>
+</section>
+
+	<section id="education" class="home-section" style="margin-top: -5em;">
+		<ul class="fa-ul"><div class="container" style="margin-top: -2em;margin-bottom: -3em">
+			<div class="row " style="margin: 0em 0 ">
+				<div class="col-md-4 "></div>
+				<div class="col-md-8 " style="margin-bottom: -1em; "><h1>Education</h1></div>
 			</div>
 
 			<h2 class="year" style="color: rgb(175, 175, 175)">2017-2021</h2>
 
 			<div class="row" style="margin: 2.5em 0 ">
 				<div class="col-md-4">
-					<img class="pub-img " style="margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/IITM.png"></img>
+					<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/IITM.png"></img>
 				</div>
 				<div class="col-md-8">
 					<li itemscope itemtype="http://schema.org/CreativeWork ">
-						<span itemprop="name"><text style="font-size: large"><b>Indian Institute of Technology Madras</b></text></span>
+						<span itemprop="name"><text><b>Indian Institute of Technology Madras</b></text></span>
 						<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 							<div class="pub-authors2 " itemprop="author ">
-								<text style="color: #0095eb; font-size: medium;">B.Tech (Honors) in Electrical Engineering (CGPA: 9.70/10), Minor in Deep Learning<br>
+								<text style="color: #0095eb; font-size: medium;">B.Tech (Honors) in Electrical Engineering, Minor in Deep Learning<br>
+								<text style="color: green; font-size: medium;">CGPA: 9.70/10</text><br>
 								</text>
 								<ul  style="padding: 1.2em;color: black">
-								<li><text style="color: black">Graduated as the 2nd topper of the Electrical Engineering department</text></li>
-								<li><text style="color: black">Recipient of the Silver Medal (Dr. Dilip Veeraraghavan Memorial Award) for featuring as the institute 2nd topper based on overall CGPA and cumulative performance in Humanities category courses</text></li>
+								<li><text style="color: black">Graduated as the second topper of the Electrical Engineering department</text></li>
+								<li><text style="color: black">Recipient of the Silver Medal (Dr. Dilip Veeraraghavan Memorial Award)</text></li>
 								<li><text style="color: black">Received the top grade (S) in all Computer Science, Mathematics and Humanities courses</text></li>
 							</ul></div>
 						</div>
@@ -407,30 +440,32 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 
 
 		<section id="work-experience" class="home-section" style="margin-top: -5em;">
-			<ul class="fa-ul"><div class="container" style="margin-top: -1em; margin-bottom: -2em;">
+			<ul class="fa-ul"><div class="container" style="margin-top: -2em; margin-bottom: -5em;">
 				<div class="row " style="margin: 0em 0 ">
 					<div class="col-md-4 "></div>
-					<div class="col-md-8 " style="margin-bottom: 0em; "><h1>Work Experience</h1></div>
+					<div class="col-md-8 " style="margin-bottom: -1em; "><h1>Work Experience</h1></div>
 				</div>
-				<h2 class="year" style="color: rgb(175, 175, 175)">2021-present</h2>
+				<h2 class="year" style="color: rgb(175, 175, 175)"></h2>
 				<div class="row" style="margin: 2.5em 0 ">
 					<div class="col-md-4">
-						<img class="pub-img " style="margin-right: auto; margin-left: auto; width: 20%" src="img/Experience/Microsoft.png"></img>
+						<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 20%" src="img/Experience/Microsoft.png"></img>
 					</div>
 					<div class="col-md-8">
 						<li itemscope itemtype="http://schema.org/CreativeWork ">
-							<span itemprop="name"><text style="font-size: large"><b>Microsoft R&D</b></text></span>
+							<span itemprop="name"><text><b>Microsoft R&D</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
 									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist</text><br>
+									<text style="color: green; font-size: medium;">2021-present</text><br>
 									<br>
-									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security. Promoted from Level 59 to Level 60 in March 2022.</text>
+									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
 								</div>
 							</div>
 						<!-- <h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em">Summer 2020</h2><br> -->
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
 									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist Intern</text><br>
+									<text style="color: green; font-size: medium;">May - July, 2020</text><br>
 									<br>
 									<text style="color: black; font-size: medium;">Interned in the Azure Global Engineering team analyzing multi-spectral satellite image data for applications in the agricultural and oil industries.</text>
 								</div>
@@ -442,14 +477,15 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 				<h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em;"></h2>
 				<div class="row" style="margin: 3.5em 0 -5em">
 					<div class="col-md-4">
-						<img class="pub-img " style="margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/GEHC.png"></img>
+						<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/GEHC.png"></img>
 					</div>
 					<div class="col-md-8"">
 						<li itemscope itemtype="http://schema.org/CreativeWork ">
-							<span itemprop="name"><text style="font-size: large"><b>General Electric</b></text></span>
+							<span itemprop="name"><text><b>General Electric</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
 									<text style="color: #0095eb; font-size: medium;">Data Science Intern</text><br>
+									<text style="color: green; font-size: medium;">May - July, 2019</text><br>
 									<br>
 									<text style="color: black; font-size: medium;">Developed ML models for keyword clustering and topic ranking of service records for identifying common failure modes in healthcare machines.</text>
 								</div>
