--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 						<span itemprop="name"><text><b>Indian Institute of Technology Madras</b></text></span>
 						<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 							<div class="pub-authors2 " itemprop="author ">
-								<text style="color: #0095eb; font-size: medium;">B.Tech (Honors) in Electrical Engineering, Minor in Deep Learning<br>
-								<text style="color: green; font-size: medium;">CGPA: 9.70/10</text><br>
+								<text style="color: #0095eb;">B.Tech (Honors) in Electrical Engineering, Minor in Deep Learning<br>
+								<text style="color: green;">CGPA: 9.70/10</text><br>
 								</text>
 								<ul  style="padding: 1.2em;color: black">
 								<li><text style="color: black">Graduated as the second topper of the Electrical Engineering department</text></li>
@@ -455,19 +455,19 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 							<span itemprop="name"><text><b>Microsoft R&D</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
-									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist</text><br>
-									<text style="color: green; font-size: medium;">2021-present</text><br>
+									<text style="color: #0095eb;">Data and Applied Scientist</text><br>
+									<text style="color: green;">2021-present</text><br>
 									<br>
-									<text style="color: black; font-size: medium;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
+									<text style="color: black;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
 								</div>
 							</div>
 						<!-- <h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em">Summer 2020</h2><br> -->
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
-									<text style="color: #0095eb; font-size: medium;">Data and Applied Scientist Intern</text><br>
-									<text style="color: green; font-size: medium;">May - July, 2020</text><br>
+									<text style="color: #0095eb;">Data and Applied Scientist Intern</text><br>
+									<text style="color: green;">May - July, 2020</text><br>
 									<br>
-									<text style="color: black; font-size: medium;">Interned in the Azure Global Engineering team analyzing multi-spectral satellite image data for applications in the agricultural and oil industries.</text>
+									<text style="color: black;">Interned in the Azure Global Engineering team analyzing multi-spectral satellite image data for applications in the agricultural and oil industries.</text>
 								</div>
 							</div>
 						</li>
@@ -484,10 +484,10 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 							<span itemprop="name"><text><b>General Electric</b></text></span>
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
-									<text style="color: #0095eb; font-size: medium;">Data Science Intern</text><br>
-									<text style="color: green; font-size: medium;">May - July, 2019</text><br>
+									<text style="color: #0095eb;">Data Science Intern</text><br>
+									<text style="color: green;">May - July, 2019</text><br>
 									<br>
-									<text style="color: black; font-size: medium;">Developed ML models for keyword clustering and topic ranking of service records for identifying common failure modes in healthcare machines.</text>
+									<text style="color: black;">Developed ML models for keyword clustering and topic ranking of service records for identifying common failure modes in healthcare machines.</text>
 								</div>
 							</div>
 						</li>
