--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 				<div class="col-xs-12 col-md-8 " itemprop="description ">
 
-					<h1 id="biography" style="margin-top: 12%">Biography</h1>
+					<h1 id="biography" style="margin-top: 12%">About me</h1>
 
 					<p>
 						I am working as a Data and Applied Scientist at Microsoft in the Cybersecurity research team. 
