--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="27% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="27% "></a>
+						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Stanford.png " width="27% "></a>
 					</td>
 				</tr>
 
@@ -131,10 +131,10 @@
 						<div class="link-simple">Data Scientist Intern<br>General Electric<br>Summer 2019</div>
 					</td>
 					<td align="center" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<div class="link-simple">Data and Applied Scientist Intern<br>Microsoft R&D<br>Summer 2020</div>
+						<div class="link-simple">Data and Applied Scientist<br>Microsoft R&D<br>2021 - 2023</div>
 					</td>
 					<td align="center" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<div class="link-simple">Data and Applied Scientist<br>Microsoft R&D<br>2021 - Present</div>
+						<div class="link-simple">M.S., Electrical Engg.<br>Stanford University<br>Sept. 2023 onwards</div>
 					</td>
 				</tr>
 			</table>
