--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="27% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="27% "></a>
+						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="35% "></a>
 					</td>
 				</tr>
 
@@ -135,7 +135,7 @@
 						<div class="link-simple">Data and Applied Scientist<br>Microsoft R&D<br>2021 - 2023</div>
 					</td>
 					<td align="center" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<div class="link-simple">M.S., Electrical Engg.<br>Stanford University<br>Sept. 2023 onwards</div>
+						<div class="link-simple">M.S., Electrical Engineering<br>Stanford University<br>Sept. 2023 onwards</div>
 					</td>
 				</tr>
 			</table>
