--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 						<div class="portrait-title">
 							<h2 itemprop="name">Emil Biju</h2>
-							<h3 id="stanford_email">emilbiju@alumni.iitm.ac.in</h3>
-							<h3 itemprop="worksFor">Microsoft | IIT Madras</h3>
+							<h3 id="stanford_email">emilbiju@stanford[.]edu</h3>
+							<h3 itemprop="worksFor">Stanford | Microsoft | IIT Madras</h3>
 						</div>
 
 						<ul class="social-icon " aria-hidden="true ">
