--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 							<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
 								<div class="pub-authors2 " itemprop="author ">
 									<text style="color: #0095eb;">Data and Applied Scientist</text><br>
-									<text style="color: green;">2021-present</text><br>
+									<text style="color: green;">2021-2023</text><br>
 									<br>
-									<text style="color: black;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security.</text>
+									<text style="color: black;">Working as a researcher at the intersection of data science and cybersecurity, with a focus on OAuth cloud app security. Built ML and graph-based algorithms that have contributed to the detection of cyberattack campaigns and takedown of over 2000 malicious OAuth apps.</text>
 								</div>
 							</div>
 						<!-- <h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em">Summer 2020</h2><br> -->
