--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 						<div class="portrait-title">
 							<h2 itemprop="name">Emil Biju</h2>
-							<h3 id="stanford_email">emilbiju@stanford[.]edu</h3>
-							<h3 itemprop="worksFor">Stanford | Microsoft | IIT Madras</h3>
+							<h3 id="stanford_email">emilbiju@stanford.edu</h3>
+							<h3 itemprop="worksFor">Stanford University</h3>
 						</div>
 
 						<ul class="social-icon " aria-hidden="true ">
@@ -120,7 +120,7 @@
 						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="27% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="45% "></a>
+						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="35% "></a>
 					</td>
 				</tr>
 
