--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
 					<h1 id="biography" style="margin-top: 12%">About me</h1>
 
 					<p>
-						I am an incoming M.S. in Electrical Engineering student at Stanford University.
+						I am an incoming M.S. in Electrical Engineering student at <a target="_blank" href="https://www.stanford.edu">Stanford University</a>.
 						For the last 2 years, I have been working at Microsoft as a Data and Applied Scientist in the Cybersecurity research team. 
-						I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="https://www.iitm.ac.in/">Indian Institute of Technology (IIT) Madras</a>. 
-						During my undergraduate studies, I pursued research at the intersection of NLP and deep learning under the guidance of <a target="_blank" href="http://www.cse.iitm.ac.in/~miteshk/">Prof. Mitesh Khapra</a> and <a target="_blank" href="http://www.cse.iitm.ac.in/~pratyush/">Prof. Pratyush Kumar</a>.
-						My work has led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
+						Previously, I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="https://www.iitm.ac.in/">Indian Institute of Technology (IIT) Madras</a>. 
+						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 						My primary research interests include Interpretable Machine Learning, Natural Language Processing, and Deep Learning.
 					</p>
 					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>
