--- a/index.html
+++ b/index.html
@@ -406,10 +406,31 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 </section>
 
 	<section id="education" class="home-section" style="margin-top: -5em;">
-		<ul class="fa-ul"><div class="container" style="margin-top: -2em;margin-bottom: -3em">
+		<ul class="fa-ul"><div class="container" style="margin-top: -3em;margin-bottom: -3em">
 			<div class="row " style="margin: 0em 0 ">
 				<div class="col-md-4 "></div>
 				<div class="col-md-8 " style="margin-bottom: -1em; "><h1>Education</h1></div>
+			</div>
+
+			<h2 class="year" style="color: rgb(175, 175, 175)">Sept. 2023 - </h2>
+
+			<div class="row" style="margin: 2.5em 0 ">
+				<div class="col-md-4">
+					<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/IITM.png"></img>
+				</div>
+				<div class="col-md-8">
+					<li itemscope itemtype="http://schema.org/CreativeWork ">
+						<span itemprop="name"><text><b>Stanford University</b></text></span>
+						<div class="pub-list-item " itemscope itemtype="http://schema.org/CreativeWork ">
+							<div class="pub-authors2 " itemprop="author ">
+								<text style="color: #0095eb;">M.S. in Electrical Engineering, specializing in AI<br>
+								</text>
+								<ul  style="padding: 1.2em;color: black">
+								<li><text style="color: black">Coursework and research in theoretical machine learning and applications in deep learning/LLMs.</text></li>
+							</ul></div>
+						</div>
+					</li>
+				</div>
 			</div>
 
 			<h2 class="year" style="color: rgb(175, 175, 175)">2017-2021</h2>
@@ -434,7 +455,8 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 						</div>
 					</li>
 				</div>
-			</div></div>
+			</div>
+		</div></ul>
 		</section>
 
 
