--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="27% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="35% "></a>
+						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="27% "></a>
 					</td>
 				</tr>
 
@@ -416,7 +416,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 
 			<div class="row" style="margin: 2.5em 0 ">
 				<div class="col-md-4">
-					<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/IITM.png"></img>
+					<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/About/Stanford.png"></img>
 				</div>
 				<div class="col-md-8">
 					<li itemscope itemtype="http://schema.org/CreativeWork ">
