--- a/index.html
+++ b/index.html
@@ -100,9 +100,17 @@
 						For the last 2 years, I have been working at Microsoft as a Data and Applied Scientist in the Cybersecurity research team. 
 						Previously, I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="https://www.iitm.ac.in/">Indian Institute of Technology (IIT) Madras</a>. 
 						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
-						My primary research interests include Interpretable Machine Learning, Natural Language Processing, and Deep Learning.
 					</p>
-					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>
+					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here.</a>
+					<div class="col-md-5">
+					        <h3>Interests</h3>
+					        <ul class="ul-interests">
+					          <li>Machine Learning</li>
+					          <li>Natural Language Processing</li>
+					          <li>Deep Learning/LLMs</li>
+					        </ul>
+				      	</div>
+					<i class="fa fa-download"></i>&emsp; Focus areas: Interpretable ML, NLP, Deep Learning</a>
 				</div>
 			</div>
 
