--- a/index.html
+++ b/index.html
@@ -101,16 +101,14 @@
 						Previously, I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="https://www.iitm.ac.in/">Indian Institute of Technology (IIT) Madras</a>. 
 						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 					</p>
-					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here.</a>
-					<div class="col-md-5">
-					        <h3>Interests</h3>
-					        <ul class="ul-interests">
-					          <li>Machine Learning</li>
-					          <li>Natural Language Processing</li>
-					          <li>Deep Learning/LLMs</li>
-					        </ul>
-				      	</div>
-					<i class="fa fa-download"></i>&emsp; Focus areas: Interpretable ML, NLP, Deep Learning</a>
+					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>.<br>
+					<i class="fa-regular fa-magnifying-glass"></i>&emsp; Focus areas: Interpretable ML, NLP, Deep Learning</a><br>
+					<h3>Interests</h3>
+					<ul class="ul-interests">
+					<li>Machine Learning</li>
+					<li>Natural Language Processing</li>
+					<li>Deep Learning/LLMs</li>
+					</ul>
 				</div>
 			</div>
 
