--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 					</p>
 					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>.<br>
-					<i class="fa-regular fa-magnifying-glass"></i>&emsp; Focus areas: Interpretable ML, NLP, Deep Learning</a><br>
-					<h3>Interests</h3>
-					<ul class="ul-interests">
-					<li>Machine Learning</li>
+					<i class="fa fa-search"></i>&emsp; Focus areas: Interpretable ML, NLP, Deep Learning</a><br>
+					<h2>Interests</h2>
+					<ul class="fa-ul">
+					<li>Interpretable Machine Learning</li>
 					<li>Natural Language Processing</li>
 					<li>Deep Learning/LLMs</li>
 					</ul>
@@ -418,7 +418,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 				<div class="col-md-8 " style="margin-bottom: -1em; "><h1>Education</h1></div>
 			</div>
 
-			<h2 class="year" style="color: rgb(175, 175, 175)">Sept. 2023 - </h2>
+			<h2 class="year" style="color: rgb(175, 175, 175)">Sept. 2023 onwards </h2>
 
 			<div class="row" style="margin: 2.5em 0 ">
 				<div class="col-md-4">
@@ -432,7 +432,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 								<text style="color: #0095eb;">M.S. in Electrical Engineering, specializing in AI<br>
 								</text>
 								<ul  style="padding: 1.2em;color: black">
-								<li><text style="color: black">Coursework and research in theoretical machine learning and applications in deep learning/LLMs.</text></li>
+								<li><text style="color: black">Coursework and research in theoretical machine learning and applications to deep learning/LLMs.</text></li>
 							</ul></div>
 						</div>
 					</li>
