--- a/index.html
+++ b/index.html
@@ -102,13 +102,7 @@
 						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 					</p>
 					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>.<br>
-					<i class="fa fa-search"></i>&emsp; Focus areas: Interpretable ML, NLP, Deep Learning</a><br>
-					<h2>Interests</h2>
-					<ul class="fa-ul">
-					<li>Interpretable Machine Learning</li>
-					<li>Natural Language Processing</li>
-					<li>Deep Learning/LLMs</li>
-					</ul>
+					<i class="fa fa-search"></i>&emsp; Interests: Interpretable Machine Learning, NLP, Deep Learning/LLMs</a>
 				</div>
 			</div>
 
