--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 							<h3 id="stanford_email">emilbiju@stanford.edu</h3>
 							<h3 itemprop="worksFor">Stanford University</h3>
 						</div>
-
-						<ul class="social-icon " aria-hidden="true ">
+						
+						<ul class="social-icon " aria-hidden="true ", style="margin-top: -0.1pt">
 							<li><a href="mailto:emilbiju7@gmail.com"><i class="fa fa-envelope big-icon"></i></a></li>
 							<li><a target="_blank" href="https://scholar.google.com/citations?user=vPI2AAUAAAAJ&hl=en"><i class="ai ai-google-scholar big-icon"></i></a></li>
 							<li><a target="_blank" href="https://github.com/emilbiju/"><i class="fa fa-github big-icon"></i></a></li>
@@ -101,8 +101,12 @@
 						Previously, I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="https://www.iitm.ac.in/">Indian Institute of Technology (IIT) Madras</a>. 
 						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 					</p>
-					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>.<br>
-					<i class="fa fa-search"></i>&emsp; Interests: Interpretable Machine Learning, NLP, Deep Learning/LLMs</a>
+					<i class="fa fa-search"></i>&emsp; Interests: Interpretable Machine Learning, NLP, Deep Learning/LLMs</a><br>
+					<i class="fa fa-download"></i>&emsp; Download my résumé <a target="_blank" href="resources/resume.pdf">here</a>
+					<!-- <h2>Interests</h2>
+					&emsp; <i class="fa-light fa-dash"></i> Interpretable Machine Learning<br>
+					&emsp; <i class="fa-light fa-dash"></i> Natural Language Processing</i><br>
+					&emsp; <i class="fa-light fa-dash"></i> Deep Learning/LLMs</i><br> -->
 				</div>
 			</div>
 
