--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</div>
 			</div>
 
-			<table class='about-edu', style="margin-bottom: -1em">
+			<table class='about-edu', style="margin-bottom: -1em;margin-left: 3em">
 				<tr>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
 						<a target="_blank" href="http://iitm.ac.in"><img src="img/About/IITM.png " width="35% "></a>
