--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 								<text style="color: #0095eb;">M.S. in Electrical Engineering, specializing in AI<br>
 								</text>
 								<ul  style="padding: 1.2em;color: black">
-								<li><text style="color: black">Coursework and research in theoretical machine learning and applications to deep learning/LLMs.</text></li>
+								<li><text style="color: black">Coursework and research in interpretable machine learning and applications to deep learning/LLMs.</text></li>
 							</ul></div>
 						</div>
 					</li>
