--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<div class="link-simple">Data and Applied Scientist<br>Microsoft R&D<br>2021 - 2023</div>
 					</td>
 					<td align="center" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<div class="link-simple">M.S., Electrical Engineering<br>Stanford University<br>Sept. 2023 onwards</div>
+						<div class="link-simple">M.S., Electrical Engineering<br>Stanford University<br>Starting Sept. 2023</div>
 					</td>
 				</tr>
 			</table>
