--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<h3 id="stanford_email">emilbiju@stanford.edu</h3>
 							<h3 itemprop="worksFor">Stanford University</h3>
 						</div>
-						
+
 						<ul class="social-icon " aria-hidden="true ", style="margin-top: -0.1pt">
 							<li><a href="mailto:emilbiju7@gmail.com"><i class="fa fa-envelope big-icon"></i></a></li>
 							<li><a target="_blank" href="https://scholar.google.com/citations?user=vPI2AAUAAAAJ&hl=en"><i class="ai ai-google-scholar big-icon"></i></a></li>
@@ -113,16 +113,16 @@
 			<table class='about-edu', style="margin-bottom: -1em;margin-left: 3em">
 				<tr>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="http://iitm.ac.in"><img src="img/About/IITM.png " width="35% "></a>
+						<a target="_blank" href="http://iitm.ac.in"><img src="img/About/IITM.png " width="32% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.gehealthcare.com"><img src="img/About/GEHC.png " width="35% "></a>
+						<a target="_blank" href="https://www.gehealthcare.com"><img src="img/About/GEHC.png " width="32% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="27% "></a>
+						<a target="_blank" href="https://www.microsoft.com"><img src="img/About/Microsoft.png " width="25% "></a>
 					</td>
 					<td align="middle" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="24% "></a>
+						<a target="_blank" href="https://www.stanford.edu"><img src="img/About/Stanford.png " width="21% "></a>
 					</td>
 				</tr>
 
@@ -137,7 +137,7 @@
 						<div class="link-simple">Data and Applied Scientist<br>Microsoft R&D<br>2021 - 2023</div>
 					</td>
 					<td align="center" style="vertical-align: middle; background-color: rgba(255, 255, 255, 1)">
-						<div class="link-simple">M.S., Electrical Engineering<br>Stanford University<br>Starting Sept. 2023</div>
+						<div class="link-simple">M.S., Electrical Engineering<br>Stanford University<br>Sept. 2023 onwards</div>
 					</td>
 				</tr>
 			</table>
@@ -420,7 +420,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 
 			<div class="row" style="margin: 2.5em 0 ">
 				<div class="col-md-4">
-					<img class="pub-img" style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 20%" src="img/About/Stanford.png"></img>
+					<img class="pub-img" style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 17%" src="img/About/Stanford.png"></img>
 				</div>
 				<div class="col-md-8">
 					<li itemscope itemtype="http://schema.org/CreativeWork ">
@@ -430,7 +430,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 								<text style="color: #0095eb;">M.S. in Electrical Engineering, specializing in AI<br>
 								</text>
 								<ul  style="padding: 1.2em;color: black">
-								<li><text style="color: black">Coursework and research in interpretable machine learning and applications to deep learning/LLMs.</text></li>
+								<li><text style="color: black">Coursework and research in theoretical machine learning and applications to deep learning/LLMs.</text></li>
 							</ul></div>
 						</div>
 					</li>
@@ -441,7 +441,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 
 			<div class="row" style="margin: 2.5em 0 ">
 				<div class="col-md-4">
-					<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/IITM.png"></img>
+					<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 23%" src="img/Experience/IITM.png"></img>
 				</div>
 				<div class="col-md-8">
 					<li itemscope itemtype="http://schema.org/CreativeWork ">
@@ -473,7 +473,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 				<h2 class="year" style="color: rgb(175, 175, 175)"></h2>
 				<div class="row" style="margin: 2.5em 0 ">
 					<div class="col-md-4">
-						<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 20%" src="img/Experience/Microsoft.png"></img>
+						<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 18%" src="img/Experience/Microsoft.png"></img>
 					</div>
 					<div class="col-md-8">
 						<li itemscope itemtype="http://schema.org/CreativeWork ">
@@ -502,7 +502,7 @@ Gesture typing is a method of typing words on a touch-based keyboard by creating
 				<h2 class="year" style="color: rgb(175, 175, 175); margin-top: -1em;"></h2>
 				<div class="row" style="margin: 3.5em 0 -5em">
 					<div class="col-md-4">
-						<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 27%" src="img/Experience/GEHC.png"></img>
+						<img class="pub-img " style="margin-top: 1em; margin-right: auto; margin-left: auto; width: 23%" src="img/Experience/GEHC.png"></img>
 					</div>
 					<div class="col-md-8"">
 						<li itemscope itemtype="http://schema.org/CreativeWork ">
