--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 					<li class="nav-item"><a href="#education">Education</a></li>
 					<li class="nav-item"><a href="#work-experience">Work</a></li>
 					<li class="nav-item"><a target="_blank" href="https://passionjee.wordpress.com">Blog</a></li>
+					<li class="nav-item"><a target="_blank" href="resources/Resume.pdf">CV</a></li>
 				</ul>
 			</div>
 		</div>
