--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<li class="nav-item"><a href="#education">Education</a></li>
 					<li class="nav-item"><a href="#work-experience">Work</a></li>
 					<li class="nav-item"><a target="_blank" href="https://passionjee.wordpress.com">Blog</a></li>
-					<li class="nav-item"><a target="_blank" href="resources/Resume.pdf">CV</a></li>
+					<li class="nav-item"><a target="_blank" href="resources/resume.pdf">CV</a></li>
 				</ul>
 			</div>
 		</div>
@@ -86,7 +86,7 @@
 							<li><a target="_blank" href="https://scholar.google.com/citations?user=vPI2AAUAAAAJ&hl=en"><i class="ai ai-google-scholar big-icon"></i></a></li>
 							<li><a target="_blank" href="https://github.com/emilbiju/"><i class="fa fa-github big-icon"></i></a></li>
 							<li><a target="_blank" href="https://www.linkedin.com/in/emilbiju/"><i class="fa fa-linkedin big-icon"></i></a></li>
-							<!-- <li><a target="_blank" href="resources/Resume.pdf"><i class="ai ai-cv big-icon"></i></a></li> -->
+							<!-- <li><a target="_blank" href="resources/resume.pdf"><i class="ai ai-cv big-icon"></i></a></li> -->
 						</ul>
 
 					</div>
