--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					<h1 id="biography" style="margin-top: 12%">About me</h1>
 
 					<p>
-						I am an incoming M.S. in Electrical Engineering student at <a target="_blank" href="https://www.stanford.edu">Stanford University</a>.
-						For the last 2 years, I have been working at Microsoft as a Data and Applied Scientist in the Cybersecurity research team. 
+						I am an MS in Electrical Engineering student at <a target="_blank" href="https://www.stanford.edu">Stanford University</a> specializing in AI/Machine Learning.
+						I worked at Microsoft for the last 2 years as a Data and Applied Scientist in the Cybersecurity research team. 
 						Previously, I graduated with a Bachelors degree in Electrical Engineering and a minor in Deep Learning from the <a target="_blank" href="https://www.iitm.ac.in/">Indian Institute of Technology (IIT) Madras</a>. 
 						During this time, I pursued research at the intersection of NLP and deep learning that led to publications in top conferences such as <a target="_blank" href="https://www.2022.aclweb.org">ACL</a>, <a target="_blank" href="https://coling2020.org">COLING</a> and <a target="_blank" href="https://www.siam.org/conferences/cm/conference/alenex22">ALENEX</a>.
 					</p>
