--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="css/hugo-academic.css">
 	<link rel="stylesheet" href="css/custom.css">
 
-	<link rel="icon" type="image/png" href="img/About/DP.jpg">
+	<link rel="icon" type="image/png" href="img/About/emil_dp_wp.jpeg">
 	<link rel="apple-touch-icon" type="image/png" href="img/apple-touch-icon.png">
 
 	<link rel="canonical" href="https://emilbiju.github.io/">
