--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="col-xs-12 col-md-4">
 					<div id="profile">
 
-						<div class="portrait" itemprop="image" style="background-image: url('img/About/DP.jpeg');"></div>
+						<div class="portrait" itemprop="image" style="background-image: url('img/About/emil_dp_wp.jpeg');"></div>
 
 						<div class="portrait-title">
 							<h2 itemprop="name">Emil Biju</h2>
